# apps/backend/internal/model/user/address.go
@@ -10,5 +10,9 @@ type UserAddress struct {
 	Latitude  float64 `json:"latitude" db:"latitude"`
 	Longitude float64 `json:"longitude" db:"longitude"`
 	IsDefault bool    `json:"isDefault" db:"is_default"`
+	FirstName string  `json:"firstName" db:"first_name"`
+	LastName  string  `json:"lastName" db:"last_name"`
+	PhoneNumber string  `json:"phoneNumber" db:"phone_number"`
+	DetailAddressDirection string  `json:"detailAddressDirection" db:"detail_address_direction"`
 
 }
